Yury Finkel: +trd ru

--- a/revo/pom.xml
+++ b/revo/pom.xml
@@ -4,8 +4,8 @@
 <vortaro>
 <art mrk="$Id$">
 <kap>
-<ofc>*</ofc>
-<rad>pom</rad>/o
+  <ofc>*</ofc>
+  <rad>pom</rad>/o
 </kap>
 <drv mrk="pom.0o">
   <kap><ofc>*</ofc><tld/>o</kap>
@@ -24,13 +24,15 @@
   <trd lng="cs">jablko</trd>
   <trd lng="de">Apfel</trd>
   <trd lng="en">apple</trd>
+  <trd lng="fr">pomme</trd>
   <trd lng="hu">alma</trd>
   <trd lng="nl">appel</trd>
   <trd lng="pl">jab&lstroke;ko</trd>
-  <trd lng="fr">pomme</trd>
+  <trd lng="ru">&c_ja;&c_b;&c_l;&c_o;&c_k;&c_o;</trd>
   <trd lng="tr">elma</trd>
   <trd lng="sv">&auml;pple</trd>
 </drv>
+
 <drv mrk="pom.0ujo0arbo">
   <kap><tld/>ujo, <tld/>arbo</kap>
   <uzo tip="fak">BOT</uzo>
@@ -45,8 +47,10 @@
   <trd lng="fr">pommier</trd>
   <trd lng="hu">almafa</trd>
   <trd lng="nl">appelboom</trd>
+  <trd lng="ru">&c_ja;&c_b;&c_l;&c_o;&c_n;&c_ja;</trd>
   <trd lng="sv">&auml;ppeltr&auml;d</trd>
 </drv>
+
 <drv mrk="pom.0vino">
   <kap><tld/>vino</kap>
   <uzo tip="fak">KUI</uzo>
@@ -59,28 +63,29 @@
   <trd lng="fr">cidre</trd>
   <trd lng="hu">almabor</trd>
   <trd lng="nl">cider</trd>
+  <trd lng="ru">&c_s;&c_i;&c_d;&c_r;</trd>
 </drv>
 </art>
 <!--
 $Log$
-Revision 1.15  2001/04/27 19:08:37  revo
+Revision 1.16 2001/07/26 18:13:01 revo
+Jozefo Horvath: +trd hu
+
+Revision 1.15 2001/04/27 19:08:37 revo
 roz.0acoj -> rozac.0oj
 
-Revision 1.14  2001/02/28 17:12:55  revo
+Revision 1.14 2001/02/28 17:12:55 revo
 Jerano Zachrisson: +trd sv
 
-Revision 1.13  2000/12/13 17:10:55  revo
+Revision 1.13 2000/12/13 17:10:55 revo
 Wolfram Diestel: ref al plurfrukto
 
-Revision 1.12  2000/10/28 16:11:23  revo
+Revision 1.12 2000/10/28 16:11:23 revo
 Wolfram Diestel: korektetis lat, germ. trd
 
-Revision 1.11  2000/04/30 18:20:07  revo
+Revision 1.11 2000/04/30 18:20:07 revo
 Paul Peeraerts: ald trad nl + pl
 
-Revision 1.10  2000/01/16 10:19:02  revo
-Wolfram Diestel: vario -> variajho
-
-Revision 1.9  2000/01/15 16:05:41  revo
+Revision 1.10 2000/01/16 10:19:02 revo
 -->
 </vortaro>
