--- a/revo/pom.xml
+++ b/revo/pom.xml
@@ -51,6 +51,30 @@
   <trd lng="sv">&auml;ppeltr&auml;d</trd>
 </drv>
 
+<drv mrk="pom.ter0o">
+  <kap><ofc>*</ofc><tld/>pomo</kap>
+  <uzo tip="fak">BOT</uzo>
+  <uzo tip="fak">KUI</uzo>
+  <snc mrk="pom.ter0o.mangxajxo">
+    <dif>
+      Man&gcirc;ebla tubero esti&gcirc;anta &ccirc;e la radikoj de
+      <tld/>pomo 2.
+    </dif>
+  </snc>
+  <snc mrk="pom.ter0o.planto">
+    <dif>
+      Specio de <ref tip="super" cel="solan.0o">solano</ref>
+      (<trd lng="la">Solanum tuberosum</trd>), devena de Ameriko
+      kun man&gcirc;eblaj radiktuberoj.
+    </dif>
+  </snc>
+  <trd lng="de">Kartoffel</trd>
+  <trd lng="fr">pomme de terre</trd>
+  <trd lng="nl">aardappel</trd>
+  <trd lng="ru">&c_k;&c_a;&c_r;&c_t;&c_o;&c_f;&c_je;&c_l;&c_mol;</trd>
+  <trd lng="tr">patates</trd>
+</drv>
+
 <drv mrk="pom.0vino">
   <kap><tld/>vino</kap>
   <uzo tip="fak">KUI</uzo>
@@ -68,6 +92,9 @@
 </art>
 <!--
 $Log$
+Revision 1.17  2001/12/20 17:36:31  revo
+Yury Finkel: +trd ru
+
 Revision 1.16 2001/07/26 18:13:01 revo
 Jozefo Horvath: +trd hu
 
@@ -84,8 +111,5 @@ Revision 1.12 2000/10/28 16:11:23 revo
 Wolfram Diestel: korektetis lat, germ. trd
 
 Revision 1.11 2000/04/30 18:20:07 revo
-Paul Peeraerts: ald trad nl + pl
-
-Revision 1.10 2000/01/16 10:19:02 revo
 -->
 </vortaro>
