ekuzu voko-formiko:2i

--- a/.github/workflows/daily-release.yml
+++ b/.github/workflows/daily-release.yml
@@ -14,7 +14,7 @@ on:
 
 env:
   # eldono de voko-formiko: {latest|stabila|2x}
-  IMAGE_TAG: 2h
+  IMAGE_TAG: 2i
   
 # agoj (gh-actions)
 # https://github.com/softprops/action-gh-release
