Wolfram Diestel: +ekz-oj

--- a/revo/pom.xml
+++ b/revo/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE vortaro SYSTEM "../dtd/vokoxml.dtd">
 <vortaro>
-<art mrk="$Id: pom.xml,v 1.128 2022/05/01 17:51:19 revo Exp $">
+<art mrk="$Id: pom.xml,v 1.129 2023/07/21 18:29:34 revo Exp $">
 <kap>
   <ofc>*</ofc>
   <rad>pom</rad>/o <fnt><bib>PV</bib></fnt>
@@ -11,108 +11,200 @@
   <snc mrk="pom.0o.KUI">
     <uzo tip="fak">KUI</uzo>
     <dif>
-      Frukto de la <tld/>arbo.
+      <ref tip="super" cel="frukt.0o.BOT">Frukto</ref>
+      de la <tld/>arbo:
+      <ekz>
+        la patro donis al mi dol&ccirc;an <tld/>on
+        <fnt>
+          <bib>F</bib>
+          <lok>&FE; 10</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        brulis fajro kaj rosti&gcirc;is <tld/>oj
+        <fnt>
+          <bib>Fab1</bib>
+          <lok>Malbonkonduta knabo</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        oraj <tld/>oj, grandaj kaj malgrandaj, pendis kiel
+        oran&gcirc;oj inter la verdaj folioj
+        <fnt>
+          <bib>Fab1</bib>
+          <lok>&Gcirc;ardeno de la paradizo</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        Vilhelmo forpafis la <tld/>on de la kapo de sia filo
+        <fnt>
+          <bib>IdO</bib>
+          <lok>Unua Parto</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        estas malfacile kompari <tld/>ojn kun citronoj
+        <fnt>
+          <bib>Monato</bib>
+          <aut>Petro Desmet'</aut>
+          <vrk><url ref="https://www.monato.be/2007/009302.php"
+              >La dika Krause? ... kredu min, sinjorino!</url></vrk>
+          <lok>2007</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        &ccirc;iutage unu <tld/>o &ndash; &ccirc;iam sana restas homo
+        <fnt>
+          <bib>Monato</bib>
+          <aut>Roberto Pigro</aut>
+          <vrk><url ref="https://www.monato.be/2013/010896.php"
+              >Amanda saporo, semo ne amenda</url></vrk>
+          <lok>2013</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        e&ccirc; por <tld/>o putranta trovi&gcirc;as amanto
+        <fnt>
+          <bib>PrV</bib>
+        </fnt>.
+      </ekz>
     </dif>
     <ref tip="super" cel="frukt.plur0o">plurfrukto</ref>
+    <ref tip="vid" cel="pir.0o">piro</ref>
   </snc>
   <snc mrk="pom.0o.FIG">
     <dif>
-      Objekto kun formo de <tld/>o.
+      Objekto kun formo de <tld/>o:
+      <ekz>
+        en unu mano &scirc;i tenis la sceptron, en la alia
+        la imperiestran <tld/>on
+        <fnt>
+          <bib>ElektFab</bib>
+          <lok>Fi&scirc;kaptisto kaj lia edzino</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        la paciento havas la senton kvaza&ubreve; la palpebroj
+        pro manko de malsekeco estas
+        algluitaj al la okul<tld/>o
+        <fnt>
+          <bib>FK</bib>
+          <lok>Fundamenta Krestomatio de la lingvo Esperanto</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        kolekti la sterk<tld/>ojn de Pegazo
+        <fnt>
+          <bib>LSB</bib>
+          <lok>Oni Malfermas La Butikon</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        jen nia gor&gcirc;<tld/>o (a&ubreve; adam<tld/>o), kaj la
+        dorn<tld/>o (frukto de la daturo),
+        kaj <klr>[&#8230;]</klr> en la &ccirc;ina, se mi ne eraras,
+        ter<tld/>ojn oni nomas per
+        vorto ekvivalenta al ter-ovoj
+        <fnt>
+          <bib>LOdE</bib>
+          <lok>2003, &#8470; 8-9 (106-107)</lok>
+        </fnt>.
+      </ekz>
     </dif>
   </snc>
   <trd lng="af">appel</trd>
-  <trd lng="am">&#x1356;&#x121D;</trd>
-  <trd lng="ar">&#x62A;&#x641;&#x627;&#x62D;&#x629;</trd>
+  <trd lng="am">&#4950;&#4637;</trd>
+  <trd lng="ar">&a_t;&a_f;&a_A;&a_H;&a_t_marbuta;</trd>
   <trd lng="az">alma</trd>
   <trd lng="be">&c_ja;&c_b;&c_l;&c_y;&c_k;</trd>
   <trd lng="bg">&c_ja;&c_b;&c_malmol;&c_l;&c_k;&c_a;</trd>
-  <trd lng="bn">&#x986;&#x9AA;&#x9C7;&#x9B2;</trd>
-  <trd lng="bo">&#xF40;&#xF74;&#xF0B;&#xF64;&#xF74;&#xF0B;</trd>
+  <trd lng="bn">&#2438;&#2474;&#2503;&#2482;</trd>
+  <trd lng="bo">&t_ka;&t_shabchu;&t_tsheg;&t_sha;&t_shabchu;&t_tsheg;</trd>
   <trd lng="ca">poma</trd>
   <trd lng="co">mela</trd>
   <trd lng="cs">jablko</trd>
   <trd lng="cy">afal</trd>
-  <trd lng="da">&#xE6;ble</trd>
+  <trd lng="da">&aelig;ble</trd>
   <trd lng="de">Apfel</trd>
   <trd lng="en">apple</trd>
   <trd lng="es">manzana</trd>
-  <trd lng="et">&#xF5;un</trd>
+  <trd lng="et">&otilde;un</trd>
   <trd lng="eu">sagar</trd>
   <trd lng="fa">&a_s;&f_y;&a_b;</trd>
   <trd lng="fr">pomme</trd>
   <trd lng="fy">appel</trd>
-  <trd lng="ga">&#xFA;ll</trd>
+  <trd lng="ga">&uacute;ll</trd>
   <trd lng="gd">ubhal</trd>
-  <trd lng="gl">maz&#xE1;</trd>
-  <trd lng="gu">&#xAB8;&#xAAB;&#xAB0;&#xA9C;&#xAA8;</trd>
-  <trd lng="hi">&#x938;&#x947;&#x92C;</trd>
+  <trd lng="gl">maz&aacute;</trd>
+  <trd lng="gu">&#2744;&#2731;&#2736;&#2716;&#2728;</trd>
+  <trd lng="hi">&#2360;&#2375;&#2348;</trd>
   <trd lng="hmn">Kua</trd>
   <trd lng="hr">jabuka</trd>
-  <trd lng="ht">p&#xF2;m</trd>
+  <trd lng="ht">p&ograve;m</trd>
   <trd lng="hu">alma</trd>
-  <trd lng="hy">&#x56D;&#x576;&#x571;&#x578;&#x580;</trd>
+  <trd lng="hy">&#1389;&#1398;&#1393;&#1400;&#1408;</trd>
   <trd lng="id">apel</trd>
-  <trd lng="ig">ap&#x1EE5;l</trd>
+  <trd lng="ig">ap&#7909;l</trd>
   <trd lng="is">epli</trd>
   <trd lng="it">mela</trd>
-  <trd lng="ja">&#x30EA;&#x30F3;&#x30B4;</trd>
+  <trd lng="ja">&#12522;&#12531;&#12468;</trd>
   <trd lng="jv">apel</trd>
-  <trd lng="ka">&#x10D5;&#x10D0;&#x10E8;&#x10DA;&#x10D8;&#x10E1;</trd>
-  <trd lng="kk">&#x430;&#x43B;&#x43C;&#x430;</trd>
-  <trd lng="km">&#x1795;&#x17D2;&#x179B;&#x17C2;&#x1794;&#x17C9;&#x17C4;&#x1798;</trd>
-  <trd lng="kn">&#xCB8;&#xCC7;&#xCAC;&#xCC1;</trd>
-  <trd lng="ko">&#xC0AC;&#xACFC;</trd>
-  <trd lng="ku">s&#xEA;v</trd>
-  <trd lng="ky">&#x430;&#x43B;&#x43C;&#x430;</trd>
+  <trd lng="ka">&#4309;&#4304;&#4328;&#4314;&#4312;&#4321;</trd>
+  <trd lng="kk">&c_a;&c_l;&c_m;&c_a;</trd>
+  <trd lng="km">&#6037;&#6098;&#6043;&#6082;&#6036;&#6089;&#6084;&#6040;</trd>
+  <trd lng="kn">&#3256;&#3271;&#3244;&#3265;</trd>
+  <trd lng="ko">&#49324;&#44284;</trd>
+  <trd lng="ku">s&ecirc;v</trd>
+  <trd lng="ky">&c_a;&c_l;&c_m;&c_a;</trd>
   <trd lng="lat">pupillam</trd>
-  <trd lng="lo">&#xE88;&#xEB2;&#xE81;&#xEAB;&#xE99;&#xEB2;&#xE81;&#xEC1;&#xEAD;&#xE9A;&#xEC0;&#xE9B;&#xEB5;</trd>
-  <trd lng="lt">obuoli&#x173;</trd>
-  <trd lng="lv">&#x101;bolu</trd>
+  <trd lng="lo">&#3720;&#3762;&#3713;&#3755;&#3737;&#3762;&#3713;&#3777;&#3757;&#3738;&#3776;&#3739;&#3765;</trd>
+  <trd lng="lt">obuoli&#371;</trd>
+  <trd lng="lv">&#257;bolu</trd>
   <trd lng="mg">paoma</trd>
   <trd lng="mi">aporo</trd>
-  <trd lng="mk">&#x458;&#x430;&#x431;&#x43E;&#x43B;&#x43A;&#x43E;</trd>
-  <trd lng="ml">&#xD06;&#xD2A;&#xD4D;&#xD2A;&#xD3F;&#xD7E;</trd>
-  <trd lng="mn">&#x430;&#x43B;&#x438;&#x43C;</trd>
-  <trd lng="mr">&#x938;&#x92B;&#x930;&#x91A;&#x902;&#x926;</trd>
-  <trd lng="mt">tuffie&#x127;</trd>
-  <trd lng="my">&#x1015;&#x1014;&#x103A;&#x1038;&#x101E;&#x102E;&#x1038;</trd>
-  <trd lng="ne">&#x938;&#x94D;&#x92F;&#x93E;&#x909;</trd>
+  <trd lng="mk">&#1112;&c_a;&c_b;&c_o;&c_l;&c_k;&c_o;</trd>
+  <trd lng="ml">&#3334;&#3370;&#3405;&#3370;&#3391;&#3454;</trd>
+  <trd lng="mn">&c_a;&c_l;&c_i;&c_m;</trd>
+  <trd lng="mr">&#2360;&#2347;&#2352;&#2330;&#2306;&#2342;</trd>
+  <trd lng="mt">tuffie&#295;</trd>
+  <trd lng="my">&#4117;&#4116;&#4154;&#4152;&#4126;&#4142;&#4152;</trd>
+  <trd lng="ne">&#2360;&#2381;&#2351;&#2366;&#2313;</trd>
   <trd lng="nl">appel</trd>
   <trd lng="ny">apulosi</trd>
-  <trd lng="pa">&#xA38;&#xA47;&#xA2C;</trd>
+  <trd lng="pa">&#2616;&#2631;&#2604;</trd>
   <trd lng="pl">jab&lstroke;ko</trd>
-  <trd lng="ps">&#x645;&#x6BC;&#x647;</trd>
+  <trd lng="ps">&a_m;&#1724;&a_h;</trd>
   <trd lng="pt">ma&ccedil;&atilde;</trd>
   <trd lng="ru">&c_ja;&c_b;&c_l;&c_o;&c_k;&c_o;</trd>
   <trd lng="rw">pome</trd>
-  <trd lng="sd">&#x635;&#x648;&#x641;</trd>
-  <trd lng="si">&#xD87;&#xDB4;&#xDBD;&#xDCA;</trd>
+  <trd lng="sd">&a_S;&a_w;&a_f;</trd>
+  <trd lng="si">&#3463;&#3508;&#3517;&#3530;</trd>
   <trd lng="sk">jablko</trd>
   <trd lng="sl">jabolko</trd>
   <trd lng="sm">apu</trd>
   <trd lng="sn">apuro</trd>
   <trd lng="so">tufaax</trd>
-  <trd lng="sq">moll&#xEB;</trd>
+  <trd lng="sq">moll&euml;</trd>
   <trd lng="st">apole</trd>
   <trd lng="su">apel</trd>
   <trd lng="sv">&auml;pple</trd>
   <trd lng="sw">mboni</trd>
-  <trd lng="ta">&#xB86;&#xBAA;&#xBCD;&#xBAA;&#xBBF;&#xBB3;&#xBCD;</trd>
-  <trd lng="te">&#xC06;&#xC2A;&#xC3F;&#xC32;&#xC4D;</trd>
-  <trd lng="tg">&#x441;&#x435;&#x431;</trd>
-  <trd lng="th">&#xE41;&#xE2D;&#xE1B;&#xE40;&#xE1B;&#xE34;&#xE25;</trd>
+  <trd lng="ta">&#2950;&#2986;&#3021;&#2986;&#3007;&#2995;&#3021;</trd>
+  <trd lng="te">&#3078;&#3114;&#3135;&#3122;&#3149;</trd>
+  <trd lng="tg">&c_s;&c_je;&c_b;</trd>
+  <trd lng="th">&#3649;&#3629;&#3611;&#3648;&#3611;&#3636;&#3621;</trd>
   <trd lng="tl">mansanas</trd>
   <trd lng="tr">elma</trd>
   <trd lng="ms">apal</trd>
   <trd lng="tt">&c_a;&c_l;&c_m;&c_a;</trd>
-  <trd lng="uk">&#x44F;&#x431;&#x43B;&#x443;&#x43A;&#x43E;</trd>
-  <trd lng="ur">&#x627;&#x6CC;&#x67E;&#x644;</trd>
+  <trd lng="uk">&c_ja;&c_b;&c_l;&c_u;&c_k;&c_o;</trd>
+  <trd lng="ur">&a_A;&f_y;&f_p;&a_l;</trd>
   <trd lng="uz">olma</trd>
-  <trd lng="vi">t&#xE1;o</trd>
+  <trd lng="vi">t&aacute;o</trd>
   <trd lng="xh">apile</trd>
-  <trd lng="yi">&#x5E2;&#x5E4;&#x5BC;&#x5DC;</trd>
+  <trd lng="yi">&ayin;&pe;&#1468;&lamed;</trd>
   <trd lng="yo">apu</trd>
-  <trd lng="zh">&#x82F9;&#x679C; [<ind>p&#x1D0;ng gu&#x1D2;</ind>]</trd>
+  <trd lng="zh">&#33529;&#26524; [<ind>p&#464;ng gu&#466;</ind>]</trd>
   <trd lng="zu">apula</trd>
 </drv>
 
@@ -125,22 +217,24 @@
     </dif>
   </snc>
   <trd lng="ca">pomereda</trd>
-  <trd lng="be">&c_ja;&c_b;&c_l;&c_y;&c_n;&c_je;&c_v;&c_y; 
+  <trd lng="be">&c_ja;&c_b;&c_l;&c_y;&c_n;&c_je;&c_v;&c_y;
 &c_s;&c_a;&c_d;</trd>
   <trd lng="br">avalenneg</trd>
-  <trd lng="de">Apfelplantage</trd>
+  <trdgrp lng="de">
+    <trd>Apfelplantage</trd>,
+    <trd>Streuobstwiese</trd>
+  </trdgrp>
   <trd lng="fa">&a_b;&a_A;&a_gh;
   <ind>&a_s;&f_y;&a_b;</ind></trd>
   <trd lng="fr">pommeraie</trd>
   <trd lng="nl">appelboomgaard</trd>
-  <trd lng="pl">sad <klr>(jab&lstroke;kowy)</klr></trd> 
-  <trd lng="ru">&c_ja;&c_b;&c_l;&c_o;&c_n;&c_je;&c_v;&c_y;&c_j; 
+  <trd lng="pl">sad <klr>(jab&lstroke;kowy)</klr></trd>
+  <trd lng="ru">&c_ja;&c_b;&c_l;&c_o;&c_n;&c_je;&c_v;&c_y;&c_j;
 &c_s;&c_a;&c_d;</trd>
 </drv>
 
 <drv mrk="pom.0ujo">
-  <kap><ofc>*</ofc><tld/>ujo 
-  <fnt><bib>F</bib>, <lok>Universala Vortaro, -uj'</lok></fnt>,
+  <kap><ofc>*</ofc><tld/>ujo,
   <var><kap><tld/>arbo</kap></var></kap>
   <snc mrk="pom.0ujo.BOT">
     <uzo tip="fak">BOT</uzo>
@@ -151,7 +245,39 @@
       kaj arbustoj,
       kies unu specio (<trd lng="la">Malus
       domestica</trd>) estas kultivata en multaj varia&jcirc;oj
-      pro la fruktoj.
+      pro la fruktoj:
+      <ekz>
+        la arbo, sur kiu kreskas <tld/>oj, estas nomata <tld/>ujo a&ubreve; <tld/>arbo
+        <fnt>
+          <bib>DL</bib>
+          <lok>Dua Libro de l' Lingvo Internacia</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        la <tld/>arboj staris tute kovritaj de flora&jcirc;o
+        <fnt>
+          <bib>Fab2</bib>
+          <lok>Malbela anasido</lok>
+        </fnt>;
+      </ekz>
+      <ekz>
+        &ccirc;u vi vidas la <tld/>ujon &ccirc;e la fino de herbejo
+        <fnt>
+          <bib>KrB</bib>
+          <lok>En sia korto &ccirc;iu kok&#8217; estas forta</lok>
+        </fnt>?
+      </ekz>
+      <ekz>
+        mi suferegis kiel nia <tld/>ujo, kiu faligis
+        duonon de siaj fruktoj
+        <fnt>
+          <bib>Monato</bib>
+          <aut>Stefan Maul</aut>
+          <vrk><url ref="https://www.monato.be/2003/008190.html"
+              >Varmego suferiga</url></vrk>
+          <lok>2003</lok>
+        </fnt>.
+      </ekz>
     </dif>
   </snc>
   <trd lng="be">&c_ja;&c_b;&c_l;&c_y;&c_n;&c_ja;</trd>
@@ -169,7 +295,7 @@
   <trd lng="sk">jablo&ncaron;</trd>
   <trd lng="sv">&auml;ppeltr&auml;d</trd>
 <trd lng="tt">&c_a;&c_l;&c_m;&c_a;&c_g;&c_a;&c_ch;</trd>
-  <trd lng="uk">&#x44F;&#x431;&#x43B;&#x443;&#x43D;&#x44F;</trd>
+  <trd lng="uk">&c_ja;&c_b;&c_l;&c_u;&c_n;&c_ja;</trd>
 </drv>
 
 <drv mrk="pom.gorgxo0o">
@@ -182,8 +308,8 @@
       Elstaro de la tiroida
       kartilago videbla sur la kolo precipe de plenkreskaj viroj:
       <ekz>
-        pro la tusado, lia viza&gcirc;o ru&gcirc;i&gcirc;is purpure, la 
-gor&gcirc;a <tld/>o 
+        pro la tusado, lia viza&gcirc;o ru&gcirc;i&gcirc;is purpure, la
+gor&gcirc;a <tld/>o
         levi&gcirc;is kaj mallevi&gcirc;is
         <fnt>
           <aut>Zhang Xingjian, trad. Miaohui</aut>,
@@ -210,21 +336,21 @@ gor&gcirc;a <tld/>o
     <trd>grdyka</trd>,
     <trd>jab&lstroke;ko Adama <klr>(pot.)</klr></trd>
   </trdgrp>
-</drv>     
+</drv>
 
 <drv mrk="pom.stel0o">
   <kap>stel<tld/>o</kap>
   <snc mrk="pom.stel0o.KUI">
     <uzo tip="fak">KUI</uzo>
     <dif>
-      Man&gcirc;ebla <ref tip="super" cel="frukt.0o.KUI">frukto</ref> de 
-      stel<tld/>arbo, kun globaj, dol&ccirc;aj fruktoj, kiuj post 
+      Man&gcirc;ebla <ref tip="super" cel="frukt.0o.KUI">frukto</ref> de
+      stel<tld/>arbo, kun globaj, dol&ccirc;aj fruktoj, kiuj post
 tratran&ccirc;o
       elmontras stelforman hela&jcirc;on &ccirc;irka&ubreve; la semoj:
       <ekz>
         parencaj specioj, anka&ubreve; nomitaj stel<tld/>oj
         estas kultivitaj en Afriko, inkluzive de
-        C. albidum kaj C. africanum
+        <nom>C. albidum</nom> kaj <nom>C. africanum</nom>
         <fnt>
           <bib>Viki</bib>,
           <lok><url ref="&Viki;/Stelpomo">
@@ -242,7 +368,7 @@ tratran&ccirc;o
   <snc mrk="pom.stel0arbo.BOT">
     <uzo tip="fak">BOT</uzo>
     <dif>
-      Alta <ref tip="lst" cel="arb.0o" lst="voko:erikoparencoj">arbo</ref> 
+      Alta <ref tip="lst" cel="arb.0o" lst="voko:erikoparencoj">arbo</ref>
       el Centrameriko, Karibio, Antiloj
       donanta fruktojn kaj plurajn kuracajn substancojn;
       <ref tip="lst" cel="speci.0o.BIO" lst="voko:botanikaj_specioj">specio</ref> el familio <ref tip="malprt" cel="sapotac.0oj.BOT">sapotacoj</ref>
@@ -251,7 +377,7 @@ tratran&ccirc;o
   </snc>
   <trd lng="de">Sternapfelbaum</trd>
   <trd lng="fr">ca&iuml;nitier</trd>
-  <trd lng="zh">&#x91D1;&#x661F;&#x679C; [<ind>j&#x12B;n x&#x12B;ng gu&#x1D2;</ind>]</trd>
+  <trd lng="zh">&#37329;&#26143;&#26524; [<ind>j&#299;n x&#299;ng gu&#466;</ind>]</trd>
 </drv>
 
 <drv mrk="pom.suker0o">
@@ -260,15 +386,14 @@ tratran&ccirc;o
     <uzo tip="fak">KUI</uzo>
     <dif>
       Man&gcirc;ebla <ref tip="super" cel="frukt.0o.KUI">frukto</ref>
-      de 
+      de
       <ref tip="malprt" cel="pom.suker0arbo">suker<tld/>arbo</ref>, kun
-      plejofte
-      verda skvameca &scirc;elo kaj je matureco blanka kaj mola
+      plej ofte verda skvameca &scirc;elo kaj je matureco blanka kaj mola
       karno:
       <ekz>
         ne forgeseblaj fruktoj estas drakofrukto
-        (<ctl>Thanh long</ctl>) kaj suker<tld/>o
-        (<ctl>m&atilde;ng c&#x1EA7;u ta</ctl>) por oferi al prapatroj
+        (<nac>Thanh long</nac>) kaj suker<tld/>o
+        (<nac>m&atilde;ng c&#7847;u ta</nac>) por oferi al prapatroj
         <fnt>
           <aut>Rejko</aut>,
           <vrk><url ref="http://blog.livedoor.jp/deziras_pacon/archives/51422109.html">
@@ -284,7 +409,7 @@ tratran&ccirc;o
     <trd>atte</trd>,
     <trd>pomme cannelle</trd>
   </trdgrp>
-  <trd lng="uk">&#x446;&#x443;&#x43A;&#x440;&#x43E;&#x432;&#x435; &#x44F;&#x431;&#x43B;&#x443;&#x43A;&#x43E; (&#x43F;&#x43B;&#x456;&#x434; &#x430;&#x43D;&#x43E;&#x43D;&#x438; &#x43B;&#x443;&#x441;&#x43A;&#x430;&#x442;&#x43E;&#x457;)</trd>
+  <trd lng="uk">&c_c;&c_u;&c_k;&c_r;&c_o;&c_v;&c_je; &c_ja;&c_b;&c_l;&c_u;&c_k;&c_o; (&c_p;&c_l;&c_ib;&c_d; &c_a;&c_n;&c_o;&c_n;&c_i; &c_l;&c_u;&c_s;&c_k;&c_a;&c_t;&c_o;&c_ji;)</trd>
 </drv>
 
 <drv mrk="pom.suker0arbo">
@@ -292,7 +417,7 @@ tratran&ccirc;o
   <snc mrk="pom.suker0arbo.BOT">
     <uzo tip="fak">BOT</uzo>
     <dif>
-      Sudamerikdevena 
+      Sudamerikdevena
       <ref tip="lst" cel="arb.0eto" lst="voko:magnolioparencoj">arbeto</ref>
        kultivata en tropikaj kaj subtropikaj landoj pro la fruktoj;
        <ref tip="lst" cel="speci.0o.BIO" lst="voko:botanikaj_specioj">specio</ref>
@@ -322,6 +447,9 @@ tratran&ccirc;o
 </art>
 <!--
 $Log$
+versio 1.129 2023/07/21 18:29:34
+Wolfram Diestel: +ekz-oj
+
 versio 1.128 2022/05/01 17:51:19
 aktualigo lingvokodoj kaj URL-unuoj
 
@@ -341,8 +469,5 @@ Revision 1.49  2015/07/04 08:37:41  revo
 aldono de trd cs per skripto de M. von Laer
 
 Revision 1.48  2015/06/29 16:40:18  revo
-aldono de trd sk per skripto de M. von Laer
-
-Revision 1.47  2015/06/28 02:10:18  revo
 -->
 </vortaro>
