Mahaer Mahmud: aldonis anglajn tradukojn

--- a/revo/pom.xml
+++ b/revo/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE vortaro SYSTEM "../dtd/vokoxml.dtd">
 <vortaro>
-<art mrk="$Id: pom.xml,v 1.129 2023/07/21 18:29:34 revo Exp $">
+<art mrk="$Id: pom.xml,v 1.130 2023/07/24 02:44:29 revo Exp $">
 <kap>
   <ofc>*</ofc>
   <rad>pom</rad>/o <fnt><bib>PV</bib></fnt>
@@ -159,7 +159,7 @@
   <trd lng="lat">pupillam</trd>
   <trd lng="lo">&#3720;&#3762;&#3713;&#3755;&#3737;&#3762;&#3713;&#3777;&#3757;&#3738;&#3776;&#3739;&#3765;</trd>
   <trd lng="lt">obuoli&#371;</trd>
-  <trd lng="lv">&#257;bolu</trd>
+  <trd lng="lv">&amacron;bolu</trd>
   <trd lng="mg">paoma</trd>
   <trd lng="mi">aporo</trd>
   <trd lng="mk">&#1112;&c_a;&c_b;&c_o;&c_l;&c_k;&c_o;</trd>
@@ -239,7 +239,8 @@
   <snc mrk="pom.0ujo.BOT">
     <uzo tip="fak">BOT</uzo>
     <dif>
-      <ref tip="lst" cel="genr.0o.BIO" lst="voko:botanikaj_genroj">Genro</ref> el familio <ref tip="malprt" cel="rozac.0oj">rozacoj</ref>
+      <ref tip="lst" cel="genr.0o.BIO" lst="voko:botanikaj_genroj">Genro</ref> el familio <ref
+      tip="malprt" cel="rozac.0oj">rozacoj</ref>
       (<trd lng="la">Malus</trd>) de
       <ref tip="lst" cel="arb.0o" lst="voko:rozoparencoj">arboj</ref>
       kaj arbustoj,
@@ -314,7 +315,8 @@ gor&gcirc;a <tld/>o
         <fnt>
           <aut>Zhang Xingjian, trad. Miaohui</aut>,
           <vrk>La Sunperiodo Grenpluvo</vrk>,
-          <lok>en <url ref="http://www.lulu.com/items/volume_64/4432000/4432358/1/print/lulu-traduko.pdf">
+          <lok>en <url
+          ref="http://www.lulu.com/items/volume_64/4432000/4432358/1/print/lulu-traduko.pdf">
           Malgranda Stacidomo kaj aliaj Mikronoveloj</url>, 1990</lok>
         </fnt>;
       </ekz>
@@ -330,6 +332,7 @@ gor&gcirc;a <tld/>o
     </dif>
   </snc>
   <trd lng="de">Adamsapfel</trd>
+  <trd lng="en">Adam's apple</trd>
   <trd lng="fr">pomme d'Adam</trd>
   <trd lng="id">jakun</trd>
   <trdgrp lng="pl">
@@ -371,13 +374,14 @@ tratran&ccirc;o
       Alta <ref tip="lst" cel="arb.0o" lst="voko:erikoparencoj">arbo</ref>
       el Centrameriko, Karibio, Antiloj
       donanta fruktojn kaj plurajn kuracajn substancojn;
-      <ref tip="lst" cel="speci.0o.BIO" lst="voko:botanikaj_specioj">specio</ref> el familio <ref tip="malprt" cel="sapotac.0oj.BOT">sapotacoj</ref>
+      <ref tip="lst" cel="speci.0o.BIO" lst="voko:botanikaj_specioj">specio</ref> el familio <ref
+      tip="malprt" cel="sapotac.0oj.BOT">sapotacoj</ref>
             (<trd lng="la">Chrysophyllum cainito</trd>).
     </dif>
   </snc>
   <trd lng="de">Sternapfelbaum</trd>
   <trd lng="fr">ca&iuml;nitier</trd>
-  <trd lng="zh">&#37329;&#26143;&#26524; [<ind>j&#299;n x&#299;ng gu&#466;</ind>]</trd>
+  <trd lng="zh">&#37329;&#26143;&#26524; [<ind>j&imacron;n x&imacron;ng gu&#466;</ind>]</trd>
 </drv>
 
 <drv mrk="pom.suker0o">
@@ -447,6 +451,9 @@ tratran&ccirc;o
 </art>
 <!--
 $Log$
+versio 1.130 2023/07/24 02:44:29
+Mahaer Mahmud: aldonis anglajn tradukojn
+
 versio 1.129 2023/07/21 18:29:34
 Wolfram Diestel: +ekz-oj
 
@@ -466,8 +473,5 @@ Revision 1.50  2016/04/11 18:10:16  revo
 Agustin Garcia Lopez: +trd(it)
 
 Revision 1.49  2015/07/04 08:37:41  revo
-aldono de trd cs per skripto de M. von Laer
-
-Revision 1.48  2015/06/29 16:40:18  revo
 -->
 </vortaro>
